# 42-data-science-pool

./: README.MD
starting/: README.md
starting/ex01/: format_ft_time.py
starting/ex02/: find_ft_type.py
starting/ex03/: NULL_not_found.py
starting/ex04/: whatis.py
starting/ex05/: building.py
starting/ex06/: filterstring.py  ft_filter.py
starting/ex07/: sos.py
starting/ex08/: Loading.py
starting/ex09/: LICENSE  README.md  pyproject.toml
starting/ex09/ft_package/: __init__.py  count_in_list.py
