[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
authors = [
  { name="sperron", email="sperron@42.fr" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
